--- a/paginas/resistores.html
+++ b/paginas/resistores.html
@@ -21,9 +21,9 @@
                 <div style="background-color: white;">
                     <h1 style="font-family: fuenteNueva; font-size:3rem">Resistores</h1>
                 </div>
-                <div style="background-color: green;">
+                <div style="background-color: green;    ">
                     <p class="txtInfo">
-                        Las resistencias (o resistores) son componentes electrónicos cuya función principal es oponerse al paso de la corriente eléctrica. Están presentes prácticamente en todos los circuitos eléctricos y electrónicos porque permiten controlar cuánta corriente circula por cada parte del circuito.<br>
+                        Las resistencias (o resistores) son componentes electrónicos cuya función principal es oponerse al paso de la corriente eléctrica. Están presentes prácticamente en todos los circuitos eléctricos y electrónicos porque permiten controlar cuánta corriente circula por cada parte del circuito.<br><br>
                         1. Limitar la corriente
                         Evitan que componentes sensibles (como LEDs, transistores, microcontroladores) reciban más corriente de la que soportan.
                         Ejemplo: Un LED conectado sin resistencia se quema inmediatamente.
@@ -31,12 +31,18 @@
                 </div>
             </div>
             <div class="grid-image">
-                <div id="subGridImage">
+                <div class="subGridImage">
                     <img src="../imgs/sub_resistencia.png" alt="no se puede cargar la img">
                 </div>
-                <div style="background-color: blue; width: 100%;height:auto">a</div>            
+                <div style="width: 100%;height:auto">
+                    <div>
+                        <center>
+                            <img width="" height="350px" src="/imgs/formula_resistor.webp" alt="imagen Error">
+                        </center>
+                    </div>
+                </div>            
             </div>
-        </div>
+        </div>  
     </div>
 </body>
 </html>
