--- a/index.html
+++ b/index.html
@@ -127,6 +127,8 @@
     </div>
 </body> 
 <footer>
-    <h1>contenido del footer</h1>
+    <div>
+        <img style="height: 200px;" src="/imgs/logo_udec.png" alt="no se pudo cargar la imagen">
+    </div>
 </footer>
 </html>
