--- a/paginas/header.html
+++ b/paginas/header.html
@@ -1,5 +1,4 @@
 <div id="boxHead">
-    <div id="boxHeadTittle">
         <center>
             <img style="height: 110px;" src="/imgs/circuito_logo.png" alt="No se encontro la imagen">
         </center>
@@ -18,7 +17,9 @@
             <a style="text-decoration: none; color: white; font-family:fuenteNueva" href="../index.html">Fuentes</a>
         </center>
         <center>
-            <a style="text-decoration: none;color: white; font-family:fuenteNueva" href="../index.html">Otra cosa</a>
+            <a style="text-decoration: none; color: white; font-family:fuenteNueva" href="../index.html">
+                otra cosa
+            </a>
         </center>
     </div>
 </div>
