--- a/paginas/diodos.html
+++ b/paginas/diodos.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diodos</title>
     <link rel="stylesheet" href="../style.css">
+    <script src="scripts.js"></script>
 </head>
 
 <body class="infoPages">
