--- a/paginas/transistores.html
+++ b/paginas/transistores.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Transistores</title>
     <link rel="stylesheet" href="../style.css">
+    <script src="scripts.js"></script>
 </head>
 <body class="infoPages">
     <div id="superior"></div>
