--- a/paginas/transistores.html
+++ b/paginas/transistores.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Transistores</title>
     <link rel="stylesheet" href="../style.css">
-    <script src="scripts.js"></script>
 </head>
 <body class="infoPages">
     <div id="superior"></div>
@@ -140,7 +139,7 @@
                         <img src="../imgs/transistor.png" style="height: 400px;" alt="no se puede cargar la img">
                     </center>
                 </div>
-                <div style="background-color: cyan; width: 100%; font-family: fuenteNueva;">
+                <div style="background-color: cyan; width: 100%; font-family: mathFont;">
                     <!-- Agregar MathJax para renderizar fórmulas -->
                     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
                     <script id="MathJax-script" async
