--- a/paginas/header.html
+++ b/paginas/header.html
@@ -17,9 +17,7 @@
             <a style="text-decoration: none; color: white; font-family:fuenteNueva" href="../index.html">Fuentes</a>
         </center>
         <center>
-            <a style="text-decoration: none; color: white; font-family:fuenteNueva" href="../index.html">
-                otra cosa
-            </a>
+            <a style="text-decoration: none; color: white; font-family:fuenteNueva" href="../index.html">Fuentes</a>
         </center>
     </div>
 </div>
