--- a/paginas/header.html
+++ b/paginas/header.html
@@ -1,4 +1,5 @@
 <div id="boxHead">
+    <div id="boxHeadTittle">
         <center>
             <img style="height: 110px;" src="/imgs/circuito_logo.png" alt="No se encontro la imagen">
         </center>
@@ -6,6 +7,7 @@
             <h1 style="height: 100%; width: 100%; font-family:fuenteNueva" >Circuitos</h1>
         </center>
     </div>
+
     <div id="boxHeadSubtitle">
             <div></div>
             <div></div>
